hide overflow to fix scrolling on ios

--- a/app/assets/stylesheets/leather/_off_canvas.css.scss
+++ b/app/assets/stylesheets/leather/_off_canvas.css.scss
@@ -1,7 +1,3 @@
-html, body {
-  overflow-x: hidden;
-}
-
 .off-canvas {
   position: fixed;
   top: 0;
@@ -27,6 +23,7 @@ html, body {
 }
   
 .off-canvas-show-right {
+  overflow: hidden;
   .off-canvas-right {
     right: 0px;
   }
@@ -36,6 +33,7 @@ html, body {
 }
 
 .off-canvas-show-left {
+  overflow: hidden;
   .off-canvas-left {
     left: 0px;
   }
